# Switchyard

./: .dockerignore  .secrets.baseline  404.html  AGENTS.md  CHANGELIST_v0.1.0_to_v0.2.0.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALLATION.md  README.md  SMAL_COMMENT_E2E.md  SMAL_GROOM_E2E.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  devzone-prerelease.yml  fern-docs-ci.yml  fern-docs-preview-build.yml  fern-docs-preview-comment.yml  getting-started.yml  package-portability.yml  perf.yml  publish-fern-docs.yml  publish.yml  server-container.yml
architecture/: index.html
benchmark/: README.md  TRIALQA_SKILL_DISTILLATION_DEMO.md  TRIALQA_SKILL_DISTILLATION_EXECUTIVE_SUMMARY.md  TRIALQA_SKILL_ON_COST_INVESTIGATION.md  agent-versions.env  compare_runs.py  prefill_probe_terminus_2.py  prepare_harbor_dataset.py  routing_trace_joiner.py  run-baseline.sh  run_manifest.py  score_run.py  score_staged_run.py  switchyard-server.Dockerfile  trialqa_local_audit_bundle.py  trialqa_local_audit_bundle_verify.py  trialqa_local_batch.py  trialqa_local_canary.py  trialqa_local_canary_score.py  trialqa_local_candidate_repair.py  trialqa_local_current_packet.py  trialqa_local_dataset.py  trialqa_local_decision_summary.py  trialqa_local_demo.py  trialqa_local_distiller.py  trialqa_local_gate.py  trialqa_local_gate_inspect.py  trialqa_local_generation_checkpoint.py  trialqa_local_goal_audit.py  trialqa_local_identifier_terminal_repair.py  trialqa_local_ladder_rehearsal.py  trialqa_local_next_step.py  trialqa_local_population_audit.py  trialqa_local_preflight.py  trialqa_local_progress.py  trialqa_local_prospective_population.py  trialqa_local_protocol_audit.py  trialqa_local_readiness.py  trialqa_local_reference_alignment.py  trialqa_local_regression.py  (+9 more)
benchmark/dimension_calibration/: corpus_manifest.yaml
benchmark/fixtures/: trialqa_reference_targets_v1.json
benchmark/routing-profiles/: prefill-probe-local.yaml  skill-distillation-nemotron-ultra.yaml  tb-lite-escalation-opus-deepseek-gemini.yaml  tb-lite-single-opus-4-7-nvidia.yaml  (+5 more)
cli_reference/: index.html
core_concepts/: index.html
crates/libsy/: Cargo.toml  DESIGN.md  README.md
crates/libsy-examples/: Cargo.toml
crates/libsy-examples/examples/: research_agent.rs  research_agent_core.rs  streaming_agent.rs
crates/libsy-examples/src/: ensemble.rs  lib.rs  llm_class.rs  rand.rs
crates/libsy-llm-client/: Cargo.toml  README.md
crates/libsy-llm-client/src/: backend.rs  client.rs  error.rs  lib.rs  raw.rs  sse.rs
crates/libsy-protocol/: Cargo.toml  NOTICE  README.md
crates/libsy-protocol/src/: envelope.rs  format.rs  ir.rs  lib.rs  llm.rs  metadata.rs  stream.rs
crates/libsy-server/: Cargo.toml  README.md
crates/libsy-server/src/: cli.rs  lib.rs  main.rs  sse.rs
crates/libsy-server/tests/: server.rs
crates/libsy/examples/: ensemble.rs  research_agent.rs  research_agent_core.rs  streaming_agent.rs
crates/libsy/src/: affinity.rs  agentic.rs  algorithms.rs  client.rs  common.rs  core.rs  driver.rs  error.rs  lib.rs  llm_class.rs  observability.rs  rand.rs  signal.rs  types.rs
crates/libsy/src/algorithms/: affinity.rs  core.rs  escalation.rs  fall_through.rs  llm_class.rs  llm_classifier.rs  metadata_processor.rs  noop.rs  rand.rs  random_classifier.rs  staged.rs  subagent_override.rs  turn_gate.rs  util.rs
crates/libsy/src/algorithms/util/: affinity.rs  stage_router.rs  tool_signals.rs
crates/libsy/src/core/: algorithm.rs  classifier.rs  driver.rs  processor.rs  state.rs
crates/libsy/src/signal/: tool_signals.rs
crates/libsy/tests/: affinity.rs  observability.rs
crates/switchyard-protocol/: Cargo.toml
crates/switchyard-protocol/src/: conversation.rs  ir.rs  lib.rs
crates/switchyard-test-server/: Cargo.toml
crates/switchyard-test-server/src/: lib.rs  main.rs
crates/switchyard-test-server/tests/: server.rs
demo/libsy-proxy/: Cargo.toml  README.md
demo/libsy-proxy/src/: main.rs
docs/: AGENTS.md  Makefile  README.md  architecture.md  architecture.mdx  cli_reference.md  cli_reference.mdx  core_concepts.md  core_concepts.mdx  getting_started.md  getting_started.mdx  index.md  index.mdx  known_issues.mdx  skill_distillation.md  skill_distillation.mdx  vllm-serve-hidden-state.md
examples/: latency_service_caller_required.yaml  libsy.py  minimal.py  profiles.yaml  python_profile.yaml  react_agent.py  relay_atof_switchyard.toml  route.yaml
getting_started/: index.html
known_issues/: index.html
scripts/: select_validation.py
search/: search_index.json
switchyard/: __init__.py  telemetry.py
switchyard_rust/: __init__.py  components.py  components.pyi  core.py  libsy.py  libsy.pyi  libsy_protocol.py  libsy_protocol.pyi  profiles.py  profiles.pyi  server.py  translation.py
tests/: _chain_test_helpers.py  test_advisor_loop_backend.py  test_advisor_profile.py  test_advisor_tool_call_backend.py  test_advisor_tool_call_backend_openai.py  test_agentapi_chat.py  test_agentapi_decorator.py  test_agentapi_llm_class.py  test_agentapi_optimizer.py  test_agentapi_public_api.py  test_agentapi_rand.py  test_backend_format_resolver.py  test_cascade_profile.py  test_chain_instrumentation.py  test_cli_reference_docs.py  test_cli_stale_names.py  test_closed_book_proxy_rewriter.py  test_configure_model_picker_inputs.py  test_deterministic_routing_cache_wrapping.py  test_deterministic_routing_profile.py  test_dev_wheel_versioning.py  test_devzone_prerelease_versioning.py  test_error_source_annotation.py  test_escalation_judge_request_processor.py  test_escalation_router_profile.py  test_fern_docs.py  test_gemini_endpoint.py  test_gemini_native_llm_backend.py  test_gemini_openai_translation.py  test_intake_cli_flags.py  test_intake_sink.py  test_intake_target.py  test_latency_service_health_metrics.py  test_latency_service_llm_backend.py  test_latency_service_spans.py  test_latency_service_stats_metrics.py  test_launch_claude.py  test_launch_claude_deterministic.py  test_launch_codex.py  test_launch_openclaw.py  (+121 more)
(+536 files in other folders)
