# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libsy-examples"
version = "0.1.0"
description = "Reference algorithms and runnable agents built on libsy"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libsy = { path = "../libsy" }
switchyard-protocol = { path = "../libsy-protocol" }
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
