# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-test-server"
version = "0.0.0"
description = "Private mock LLM server for Switchyard integration tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = "0.8"
futures-util = "0.3"
rand = "0.9"
serde_json = "1"
switchyard-protocol = { path = "../protocol" }
switchyard-translation = { path = "../switchyard-translation" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
